--- a/New Web/newsite no bs/cta.css
+++ b/New Web/newsite no bs/cta.css
@@ -2,47 +2,67 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  padding: 0 5%;
+  padding: 0 100px;
   display: flex;
-  justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.13);
   /*background: url(../img/hero.jpg) no-repeat center;*/
 }
 
 .content {
-  text-align: center;
+  text-align: left;
 }
 
-.content h1 {
-  font-size: 160px;
-  font-weight: 700;
-  line-height: 160px;
+.content h2 {
+  font-size: 5em;
+  font-weight: 800;
   color: #fff;
-  transition: color 0.5s; /* Transición para el color */
-  z-index: -999;
+  text-transform: uppercase;
+  span{
+    transition: color 1s, font-size 0.5s;
+  }
 }
 
-.content h1:hover {
+.content h3 {
+  font-size: 4em;
+  font-weight: 700;
+  color: #fff;
+  line-height: 1em;
+  text-transform: uppercase;
+}
+
+.content p {
+  font-size: 1.1em;
+  color: #fff;
+  margin: 30px 0;
+  font-weight: 400;
+  max-width: 700px;
+}
+
+.content h2 span:hover {
   color: transparent; /* Inicialmente texto transparente */
-  -webkit-text-stroke: 2px #fff; /* Contorno blanco */
+  -webkit-text-stroke: 4px #fff; /* Contorno */
+  font-size: 1.2em;
 }
 
 .content a {
-  text-decoration: none;
-  color: #fff;
   display: inline-block;
-  font-size: 24px;
-  border: 2px solid #fff;
-  padding: 14px 70px;
-  border-radius: 50px;
-  margin-top: 20px;
+  font-size: 1em;
+  background: #ffc164ff;
+  padding: 10px 30px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 500;
+  margin-top: 10px;
+  border-radius: 10px;
+  letter-spacing: 2px;
+  color: #111;
+  transition: 0.2s;
 }
 
 .content a:hover {
-  background: #fff;
-  color: #ee730f;
-  cursor: pointer;
+  background: #a5a5a5;
+  color: #0e3755ff;
 }
 
 #video-background {
@@ -65,5 +85,21 @@
   #video-background {
     width: auto;
     height: 100%;
+  }
+  .content h2 {
+    font-size: 4em;
+  }
+  
+  .content h3 {
+    font-size: 3em;
+  }
+}
+@media (max-width: 768px) {
+  .content h2 {
+    font-size: 2.5em;
+  }
+  
+  .content h3 {
+    font-size: 1.5em;
   }
 }
