--- a/New Web/newsite no bs/navbar.css
+++ b/New Web/newsite no bs/navbar.css
@@ -1,185 +1,258 @@
-.navigationWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: #000000;
-    color: white;
-  }
-  
-  .logoWrapper {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo {
-    font-weight: bold;
-    font-size: 1.2rem;
-    color: #ead24c;
-  }
-  
-  .navigation {
-    display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .parent {
-    margin-left: 20px;
-  }
-  
-  .link {
-    text-decoration: none;
-    color: white;
-    transition: color 0.3s;
-  }
-  
-  .link:hover {
-    color: #ea4f4c;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .navigationWrapper {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-  
-    .logoWrapper {
-      margin-bottom: 20px;
-    }
-  
-    .navigation {
-      flex-direction: column;
-    }
-  
-    .parent {
-      padding: 10px 0;
-    }
-  }
-  
-  /* Media query para dispositivos móviles */
-  @media screen and (max-width: 768px) {
-    .navbar {
-      width: auto;
-      right: 20px; /* Ajusta la posición para evitar solapamiento */
-      padding: 20px;
-      top: 50px;
-      left: 0px;
-    }
-    .logo {
-      top: 20px;
-      left: 40px;
-    }
-  }
-  
-  /* Landing section styles */
-  #landing-section {
-    .showcase {
-      position: absolute;
-      right: 0;
-      width: 100%;
-      min-height: 100vh;
-      padding: 100px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #111;
-      transition: 0.5s;
-    }
-  
-    .showcase.active {
-      right: 300px;
-    }
-  
-    .showcase video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: #101f20a6;
-      mix-blend-mode: overlay;
-    }
-  
-    .text {
-      position: relative;
-      z-index: 10;
-  
-      h2 {
-        font-size: 5em;
-        font-weight: 800;
-        color: #fff;
-        line-height: 2.5em;
-        text-transform: uppercase;
-      }
-    }
-  
-    .text h2 {
-      font-size: 5em;
-      font-weight: 800;
-      color: #fff;
-      line-height: 1em;
-      text-transform: uppercase;
-    }
-  
-    .text h3 {
-      font-size: 4em;
-      font-weight: 700;
-      color: #fff;
-      line-height: 1em;
-      text-transform: uppercase;
-    }
-  
-    .text p {
-      font-size: 1.1em;
-      color: #fff;
-      margin: 20px 0;
-      font-weight: 400;
-      max-width: 700px;
-    }
-  
-    .text a {
-      display: inline-block;
-      font-size: 1em;
-      background: #fff;
-      padding: 10px 30px;
-      text-transform: uppercase;
-      text-decoration: none;
-      font-weight: 500;
-      margin-top: 10px;
-      border-radius: 10px;
-      letter-spacing: 2px;
-      color: #111;
-      transition: 0.2s;
-    }
-  
-    .text a:hover {
-      background: #a5a5a5;
-      color: #0e3755ff;
-    }
-  
-    @media (max-width: 991px) {
-      .showcase,
-      .showcase header {
-        padding: 40px;
-      }
-  
-      .text h2 {
-        font-size: 3em;
-      }
-  
-      .text h3 {
-        font-size: 2em;
-      }
-    }
-  }
+* {
+	scroll-behavior: smooth;
+}
+
+.navbar {
+	padding-top: .5em;
+	padding-bottom: .5em;
+	background-color: rgb(17, 30, 39);
+	-webkit-box-shadow: 0 14px 14px -14px rgba(0, 0, 0, .75);
+	-moz-box-shadow: 0 14px 14px -14px rgba(0, 0, 0, .75);
+	box-shadow: 0 14px 14px -14px rgba(0, 0, 0, .75);
+}
+
+.sticky {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+	z-index: 100;
+}
+
+.hidden {
+	display: none;
+}
+
+.display__logo {
+	font-size: 2.5rem;
+	margin-bottom: .5rem;
+	font-family: inherit;
+	font-weight: 500;
+	line-height: 1.2;
+	color: inherit;
+}
+
+.nav__items {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.nav__link {
+	color: var(--secondary);
+	text-decoration: none;
+}
+
+.brand {
+	margin: 0;
+	font-size: 1.45em;
+}
+
+.brand a {
+	padding: 10px 15px;
+	text-align: center;
+	display: block;
+}
+
+.logo {
+	display: inline-block;
+	padding-top: .3125rem;
+	padding-bottom: .3125rem;
+	margin-right: 1rem;
+	line-height: inherit;
+}
+
+.logo::before {
+	display: inline-block;
+	vertical-align: top;
+  content: url(E:\GitHub\surf-event-web\final-web\assets\images\logos\eco-surf-logo-b-2.png);
+}
+
+.nav__items {
+	margin-top: 5px;
+
+}
+
+.brand .nav__link,
+.nav__items .nav__link {
+	padding: 10px 15px;
+	text-align: center;
+	display: block;
+}
+
+.nav__items .nav__link {
+	color: var(--secondary);
+	font-size: 0.99rem;
+}
+
+.nav__items .nav__link:hover {
+	color: var(--primary);
+}
+
+.nav__item:nth-child(1) .nav__link::before {
+	content: '1. ';
+}
+
+.nav__item:nth-child(2) .nav__link::before {
+	content: '2. ';
+}
+
+.nav__item:nth-child(3) .nav__link::before {
+	content: '3. ';
+}
+
+.nav__item:nth-child(4) .nav__link::before {
+	content: '4. ';
+}
+
+@media (min-width: 800px) {
+
+	.navbar,
+	.nav__items {
+		display: flex;
+	}
+
+	.navbar {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.navbar {
+		flex-direction: row;
+		justify-content: space-between;
+	}
+}
+
+@media screen and (max-width: 799px) {
+	.nav {
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		z-index: -1;
+		background-color: var(--primaryLight);
+		opacity: 0;
+		transition: all 0.2s ease;
+	}
+
+	.nav .nav__items {
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 100%;
+		padding-inline-start: 0;
+	}
+
+	.nav .nav__items .nav__item {
+		display: block;
+		float: none;
+		width: 100%;
+		text-align: right;
+		margin-bottom: 10px;
+	}
+
+	.nav .nav__items .nav__item:nth-child(1) a {
+		transition-delay: 0.2s;
+	}
+
+	.nav .nav__items .nav__item:nth-child(2) a {
+		transition-delay: 0.3s;
+	}
+
+	.nav .nav__items .nav__item:nth-child(3) a {
+		transition-delay: 0.4s;
+	}
+
+	.nav .nav__items .nav__item:nth-child(4) a {
+		transition-delay: 0.5s;
+	}
+
+	.nav .nav__items .nav__item:not(:first-child) {
+		margin-left: 0;
+	}
+
+	.nav .nav__items .nav__item .nav__link {
+		padding: 10px 25px;
+		opacity: 0;
+		color: var(--secondary);
+		font-size: 24px;
+		font-weight: 600;
+		transform: translateY(-20px);
+		transition: all 0.2s ease;
+	}
+
+	.nav .nav__items .nav__item .nav__link:hover {
+		color: var(--secondary);
+	}
+
+	.nav__open {
+		position: fixed;
+		right: 10px;
+		top: 16px;
+		display: block;
+		width: 48px;
+		height: 48px;
+		cursor: pointer;
+		z-index: 9999;
+		border-radius: 50%;
+	}
+
+	.nav__open i {
+		display: block;
+		width: 20px;
+		height: 2px;
+		background-color: var(--secondary);
+		border-radius: 2px;
+		margin-left: 14px;
+	}
+
+	.nav__open i:nth-child(1) {
+		margin-top: 16px;
+	}
+
+	.nav__open i:nth-child(2) {
+		margin-top: 4px;
+		opacity: 1;
+	}
+
+	.nav__open i:nth-child(3) {
+		margin-top: 4px;
+	}
+
+}
+
+
+#nav:checked+.nav__open {
+	transform: rotate(45deg);
+}
+
+#nav:checked+.nav__open i {
+	background-color: var(--secondary);
+	transition: transform 0.2s ease;
+}
+
+#nav:checked+.nav__open i:nth-child(1) {
+	transform: translateY(6px) rotate(180deg);
+}
+
+#nav:checked+.nav__open i:nth-child(2) {
+	opacity: 0;
+}
+
+#nav:checked~.nav__item a {
+	display: block !important;
+}
+
+#nav:checked+.nav__open i:nth-child(3) {
+	transform: translateY(-6px) rotate(90deg);
+}
+
+#nav:checked~.nav {
+	z-index: 9990;
+	opacity: 1;
+}
+
+#nav:checked~.nav ul li a {
+	opacity: 1;
+	transform: translateY(0);
+}
