--- a/New Web/newsite no bs/cta.css
+++ b/New Web/newsite no bs/cta.css
@@ -18,7 +18,7 @@
   font-weight: 800;
   color: #fff;
   text-transform: uppercase;
-  span{
+  span {
     transition: color 1s, font-size 0.5s;
   }
 }
@@ -68,10 +68,10 @@
 #video-background {
   position: absolute;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   z-index: -100;
 }
 
@@ -89,7 +89,7 @@
   .content h2 {
     font-size: 4em;
   }
-  
+
   .content h3 {
     font-size: 3em;
   }
@@ -98,7 +98,7 @@
   .content h2 {
     font-size: 2.5em;
   }
-  
+
   .content h3 {
     font-size: 1.5em;
   }
