--- a/New Web/newsite no bs/speakers.css
+++ b/New Web/newsite no bs/speakers.css
@@ -61,81 +61,89 @@
 
 .event-info {
   background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 8px;
+  padding: 20px;
+  text-align: center;
 }
 
-.title,
-.price {
+.title {
   color: #18537a;
   font-size: 1.5em;
   font-weight: bold;
   letter-spacing: 1px;
-  margin: 12px;
+  margin-bottom: 10px;
 }
 
 .info {
-  letter-spacing: 0.5px;
-  margin-bottom: 6px;
+  color: #555;
+  font-size: 0.9em;
+  margin-bottom: 8px;
 }
 
 .separator {
   width: 20%;
   height: 6px;
   background-color: #17537a;
-  margin-bottom: 16px;
+  margin: 0 auto 16px;
 }
 
-.additional-info {
-  border-top: 1px solid #bbb;
-  margin-top: 12px;
-  padding: 28px;
-  padding-bottom: 0;
-}
-
-.additional-info .info {
+.description {
+  color: #777;
   font-size: 0.9em;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.info i {
-  color: #18537a;
-  font-size: 1.1em;
-  margin-right: 4px;
-}
-
-.info span {
-  color: #18537a;
-  font-weight: bolder;
+  line-height: 1.5;
 }
 
 .action {
+  display: block;
   color: #fff;
-  border: 3px solid #fff;
-  background-color: transparent;
-  position: absolute;
-  top: -100px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 60%;
-  outline: none;
-  cursor: pointer;
-  padding: 12px;
+  background-color: #18537a;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1em;
   text-transform: uppercase;
-  font-size: 1.3em;
-  font-weight: bold;
-  letter-spacing: 2px;
-  transition: background-color 0.4s, top 0.4s;
-}
-
-.item-container:hover .action {
-  top: 50px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .action:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: #143653;
+}
+
+@media (max-width: 768px) {
+  .item-container {
+    width: calc(
+      50% - 30px
+    ); /* Ajustar el ancho de los items en dispositivos más pequeños */
+  }
+}
+
+@media (max-width: 480px) {
+  .item-container {
+    width: calc(
+      100% - 20px
+    ); /* Ajustar el ancho de los items en dispositivos aún más pequeños */
+  }
+}
+
+.section-intro {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.intro-title {
+  font-size: 38px;
+  color: #18537a;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.intro-paragraph {
+  font-size: 18px;
+  color: #444;
+  line-height: 1.6;
+  text-align: justify;
+  margin: 0 auto;
+  max-width: 800px;
+  padding: 0 20px; /* Aplica una sangría de 20px en ambos lados */
 }
