--- a/New Web/newsite no bs/styles.css
+++ b/New Web/newsite no bs/styles.css
@@ -171,6 +171,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  object-fit: cover;
   background-color: rgba(14, 14, 22, 0.568);
   z-index: -1;
 }
@@ -604,6 +605,7 @@ img {
   margin: 0 auto;
   padding: 0 15px;
   box-sizing: border-box;
+  margin-bottom: 3em;
 }
 
 .row {
