--- a/version-actual/website/css/styles.css
+++ b/version-actual/website/css/styles.css
@@ -111,7 +111,11 @@ body {
   font-style: normal;
 }
 
-/* Estilos del Navbar */
+
+
+
+
+/* Estilos del Navbar, hace falta par las posiciones de las cards */
 .navbar {
   position: fixed;
   top: 0;
@@ -145,198 +149,7 @@ body {
   text-decoration: none;
 }
 
-/* Estilos del Video de Fondo */
-.hero {
-  position: relative;
-  height: 100vh;
-  overflow: hidden;
-}
-
-#video-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -1;
-  object-fit: cover;
-  background-color: #000000;
-}
-
-#video-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-color: rgba(14, 14, 22, 0.568);
-  z-index: -1;
-}
-
-/* Estilos mejorados del CTA (Call to Action) */
-.cta {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: #fff;
-}
-
-.cta h2 {
-  font-size: 6.5em; /* Aumentamos el tamaño del texto */
-  margin-bottom: 30px; /* Mayor espacio inferior */
-}
-
-
-/* Estilos de la sección de información */
-.info-section {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-}
-
-.info-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.date-wrap,
-.location-wrap,
-.social-share {
-  flex: 1;
-}
-
-.date-wrap h5,
-.location-wrap h5,
-.social-icons {
-  margin: 0;
-}
-
-.social-icons {
-  list-style: none;
-  padding: 0;
-}
-
-.social-icons li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.social-icons li a {
-  color: #fff;
-  font-size: 1.5em;
-  text-decoration: none;
-}
-
-/* Estilos de la sección de about */
-
-.about-section {
-  padding: 80px 0;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #f2f2f2;
-}
-
-.about-content {
-  max-width: 600px;
-  padding-right: 20px;
-}
-
-.about-content h2 {
-  font-size: 32px;
-  margin-bottom: 20px;
-}
-
-.about-content p {
-  line-height: 1.6;
-  margin-bottom: 20px;
-}
-
-.about-image {
-  max-width: 100%;
-  height: auto;
-}
-
-@media (max-width: 768px) {
-  .about-section {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .about-content,
-  .about-image {
-    max-width: 100%;
-  }
-
-  .about-content {
-    padding: 0 20px;
-  }
-}
-
-/* Estilos de la sección de ponentes de la charla */
-
-.artists-section {
-  padding: 80px 0;
-  text-align: center;
-}
-
-.artists-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.artist {
-  width: 45%;
-  margin: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.artist img {
-  width: 100%;
-  height: auto;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.artist-info {
-  padding: 20px;
-  text-align: left;
-}
-
-.artist-info p {
-  margin: 10px 0;
-  font-size: 16px;
-}
-
-.artist-info strong {
-  font-weight: bold;
-}
-
-.artist-info a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-.artist-info a:hover {
-  text-decoration: underline;
-}
-
-/* Estilos del calendario */
+/* Estilos del calendario, hace falta para los logo-slide*/
 
 .schedule-section {
   padding: 80px 0;
@@ -424,273 +237,4 @@ img {
   display: block;
   margin: auto;
   border-radius: 5px;
-}
-
-/* Estilos de los tickets */
-
-.pricing-section {
-  padding: 80px 0;
-  text-align: center;
-}
-
-.pricing-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.pricing-card {
-  width: 300px;
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-
-.pricing-card:hover {
-  transform: translateY(-10px);
-}
-
-.pricing-card h3 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.pricing-card p {
-  font-size: 16px;
-  margin-bottom: 20px;
-}
-
-.pricing-card .pricing-tag {
-  font-size: 14px;
-  color: #007bff;
-}
-
-.pricing-card ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  text-align: left;
-}
-
-.pricing-card ul li {
-  margin-bottom: 10px;
-}
-
-.pricing-card a {
-  display: inline-block;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-.pricing-card a:hover {
-  background-color: #0056b3;
-}
-
-/* Estilos del formualrio de contacto y google maps */
-
-.contact-section {
-  padding: 80px 0;
-  text-align: center;
-}
-
-.contact-container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.contact-container h2 {
-  margin-bottom: 30px;
-}
-
-.nav-tabs {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 40px;
-}
-
-.nav-tabs button {
-  border: none;
-  background: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.nav-tabs button:hover {
-  background-color: #f0f0f0;
-  border-radius: 5px;
-}
-
-.tab-content {
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 40px;
-}
-
-.tab-pane {
-  display: none;
-}
-
-.tab-pane.active {
-  display: block;
-}
-
-.form-control {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
-}
-
-.form-control:focus {
-  outline: none;
-  border-color: #007bff;
-}
-
-.btn {
-  width: 100%;
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.btn:hover {
-  background-color: #0056b3;
-}
-
-.google-map {
-  width: 100%;
-  height: 450px;
-  border: 0;
-  margin-top: 20px;
-}
-
-/* Estilos del footer */
-
-.site-footer {
-  background-color: #111;
-  color: #fff;
-  padding-top: 50px;
-  padding-bottom: 20px;
-}
-
-.site-footer-top {
-  border-bottom: 1px solid #444;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}
-
-.site-footer-bottom {
-  border-top: 1px solid #444;
-  padding-top: 20px;
-  margin-top: 20px;
-}
-
-.container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 0 15px;
-  box-sizing: border-box;
-  margin-bottom: 3em;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
-.col-lg-6 {
-  flex: 0 0 50%;
-  max-width: 50%;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.col-lg-3 {
-  flex: 0 0 25%;
-  max-width: 25%;
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-.site-footer h2,
-.site-footer h5,
-.site-footer p {
-  margin: 0;
-  color: #fff;
-}
-
-.site-footer-title {
-  margin-bottom: 10px;
-}
-
-.social-icon-item {
-  margin-right: 10px;
-}
-
-.social-icon-link {
-  color: #fff;
-  text-decoration: none;
-  font-size: 20px;
-  transition: color 0.3s ease;
-}
-
-.social-icon-link:hover {
-  color: #007bff;
-}
-
-.site-footer-links {
-  list-style: none;
-  padding-left: 0;
-}
-
-.site-footer-link-item {
-  margin-bottom: 10px;
-}
-
-.site-footer-link {
-  color: #ccc;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-.site-footer-link:hover {
-  color: #007bff;
-}
-
-.copyright-text {
-  color: #ccc;
-  margin-bottom: 0;
-}
-
-.countdown {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-bottom: 1.5em;
-}
-
-#timer {
-  font-size: 3rem;
-  color: #ffffff;
-  padding: 20px;
 }
