contact page + contact styles

--- a/version-actual/website/pages/formstyle.css
+++ b/version-actual/website/pages/formstyle.css
@@ -1,175 +1,567 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
-}
+/*-- -------------------------- -->
+<---          Contact           -->
+<--- -------------------------- -*/
 
-body {
-  background-image: url("ruta/a/tu/imagen.jpg");
-  background-size: cover;
-  background-position: center;
-  filter: brightness(0.5); /* Aplica un filtro oscuro */
-}
-
-.container {
-  width: 100%;
-  max-width: 650px;
-  padding: 28px;
-  margin: 0 28px;
-  border-radius: 10px;
-  box-shadow: inset -2px 2px 2px white;
-  background: url(../../images/stock/vertical1.jpg);
-  background-size: cover;
-  background-position: center;
-  background-color: rgba(0, 0, 0, 0); /* Añade un fondo negro transparente */
-  color: white; /* Cambia el color del texto a blanco */
-  padding: 20px; /* Ajusta el espacio interno del contenedor */
-  border-radius: 10px; /* Añade esquinas redondeadas */
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-input[type="password"],
-input[type="submit"] {
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.541
-  ); /* Cambia el color de fondo de los campos de entrada */
-  border: 1px solid rgba(255, 255, 255, 0.863); /* Añade un borde */
-  color: white; /* Cambia el color del texto a blanco */
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="tel"]:focus,
-input[type="password"]:focus {
-  background-color: rgba(
-    39,
-    39,
-    39,
-    0.2
-  ); /* Cambia el color de fondo cuando el campo está seleccionado */
-  border: 1px solid white; /* Cambia el color del borde cuando el campo está seleccionado */
-}
-
-.form-title {
-  font-size: 26px;
-  font-weight: 600;
-  text-align: center;
-  padding-bottom: 6px;
-  color: white;
-  text-shadow: 2px 2px 2px black;
-  border-bottom: solid 1px white;
-}
-
-.main-user-info {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 20px 0;
-}
-
-.user-input-box:nth-child(2n) {
-  justify-content: end;
-}
-
-.user-input-box {
-  display: flex;
-  flex-wrap: wrap;
-  width: 50%;
-  padding-bottom: 15px;
-}
-
-.user-input-box label {
-  width: 95%;
-  color: white;
-  font-size: 20px;
-  font-weight: 400;
-  margin: 5px 0;
-}
-
-.user-input-box input {
-  height: 40px;
-  width: 95%;
-  border-radius: 7px;
-  outline: none;
-  border: 1px solid grey;
-  padding: 0 10px;
-}
-
-.gender-title {
-  color: white;
-  font-size: 24px;
-  font-weight: 600;
-  border-bottom: 1px solid white;
-}
-
-.gender-category {
-  margin: 15px 0;
-  color: white;
-}
-
-.gender-category label {
-  padding: 0 20px 0 5px;
-}
-
-.gender-category label,
-.gender-category input,
-.form-submit-btn input {
-  cursor: pointer;
-}
-
-.form-submit-btn {
-  margin-top: 40px;
-}
-
-.form-submit-btn input {
-  display: block;
-  width: 100%;
-  margin-top: 10px;
-  font-size: 20px;
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  color: rgb(209, 209, 209);
-  background: rgba(63, 114, 76, 0.7);
-}
-
-.form-submit-btn input:hover {
-  background: rgba(56, 204, 93, 0.7);
-  color: rgb(255, 255, 255);
-}
-
-@media (max-width: 600px) {
-  .container {
-    min-width: 280px;
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #cs-contact-242 {
+    padding: var(--sectionPadding);
   }
-
-  .user-input-box {
-    margin-bottom: 12px;
+  #cs-contact-242 .cs-container {
+    width: 100%;
+    max-width: 80rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
+  }
+  #cs-contact-242 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #cs-contact-242 .cs-topper {
+    font-size: var(--topperFontSize);
+    line-height: 1.2em;
+    text-transform: uppercase;
+    text-align: inherit;
+    letter-spacing: 0.1em;
+    font-weight: 700;
+    color: var(--primary);
+    margin-bottom: 0.25rem;
+    display: block;
+  }
+  #cs-contact-242 .cs-title {
+    font-size: var(--headerFontSize);
+    font-weight: 900;
+    line-height: 1.2em;
+    text-align: inherit;
+    max-width: 32.625rem;
+    margin: 0 0 1rem 0;
+    color: var(--headerColor);
+    position: relative;
+  }
+  #cs-contact-242 .cs-text {
+    font-size: var(--bodyFontSize);
+    line-height: 1.5em;
+    text-align: inherit;
+    width: 100%;
+    max-width: 32.625rem;
+    margin: 0;
+    color: var(--bodyTextColor);
+  }
+  #cs-contact-242 #cs-form-242 {
+    width: 100%;
+    /* 32px - 40px */
+    margin-bottom: clamp(2rem, 5.3vw, 2.5rem);
+    /* 20px - 40px */
+    padding: clamp(1.25rem, 4.5vw, 2.5rem);
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+    border: 1px solid #dad9e3;
+    border-radius: 1rem;
+  }
+  #cs-contact-242 .cs-label {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.3vw, 1rem);
+    line-height: 1.5em;
+    font-weight: 700;
+    /* 16px - 20px */
+    margin-bottom: clamp(1rem, 1em, 1.25rem);
+    color: var(--headerColor);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  #cs-contact-242 .cs-label-message {
+    /* 32px - 40px */
+    margin-bottom: clamp(2rem, 4.5vw, 2.5rem);
+  }
+  #cs-contact-242 .cs-input,
+  #cs-contact-242 .cs-textarea {
+    font-size: 1rem;
+    width: 100%;
+    height: 4rem;
+    margin-top: 0.25rem;
+    padding-left: 1.25rem;
+    /* set transparent border so on hover border doesn't make it glitch */
+    border: 1px solid transparent;
+    border-bottom: 1px solid #b4b2c7;
+    /* prevents border & padding from affecting height */
+    box-sizing: border-box;
+    transition: border 0.3s;
+  }
+  #cs-contact-242 .cs-input:hover,
+  #cs-contact-242 .cs-textarea:hover {
+    border: 1px solid var(--primary);
+  }
+  #cs-contact-242 .cs-input::placeholder,
+  #cs-contact-242 .cs-textarea::placeholder {
+    color: #7d799c;
+  }
+  #cs-contact-242 .cs-textarea {
+    font-family: inherit;
+    margin: 0;
+    padding-top: 1.25rem;
+    min-height: 7.5rem;
+  }
+  #cs-contact-242 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+    color: #fff;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    border-radius: 0.25rem;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
+  }
+  #cs-contact-242 .cs-button-solid:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 0.25rem;
+    transition: width 0.3s;
+  }
+  #cs-contact-242 .cs-button-solid:hover:before {
     width: 100%;
   }
-
-  .user-input-box:nth-child(2n) {
-    justify-content: space-between;
+  #cs-contact-242 .cs-submit {
+    width: 100%;
+    border: none;
+    border-radius: 0.5rem;
   }
-
-  .gender-category {
+  #cs-contact-242 .cs-submit:hover {
+    cursor: pointer;
+  }
+  #cs-contact-242 .cs-right-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    /* 28px - 40px */
+    gap: clamp(1.75rem, 4vw, 2.5rem);
+    position: relative;
+  }
+  #cs-contact-242 .cs-ul {
+    padding: 0;
+    /* 16px - 32px */
+    padding-left: clamp(1rem, 3vw, 2rem);
+    margin: 0;
+    width: 100%;
+    /* prevents padding from adding to height and width */
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+  }
+  #cs-contact-242 .cs-li {
+    list-style: none;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  #cs-contact-242 .cs-li:hover .cs-icon-wrapper {
+    transform: scale(1.2);
+  }
+  #cs-contact-242 .cs-li:nth-of-type(2) {
+    padding-bottom: 1.25rem;
+    border-bottom: 1px solid #dad9e3;
+  }
+  #cs-contact-242 .cs-header {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 2vw, 1.25rem);
+    font-weight: 700;
+    line-height: 1.2em;
+    margin-bottom: 0.5rem;
+    color: var(--headerColor);
+    display: block;
+  }
+  #cs-contact-242 .cs-link {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 2vw, 1.25rem);
+    line-height: 1.2em;
+    text-decoration: none;
+    color: var(--bodyTextColor);
+    position: relative;
+  }
+  #cs-contact-242 .cs-link:hover:before {
+    width: 100%;
+  }
+  #cs-contact-242 .cs-link:before {
+    /* top right box */
+    content: "";
+    width: 0%;
+    height: 2px;
+    /* current color of parent */
+    background: currentColor;
+    opacity: 1;
+    position: absolute;
+    display: block;
+    bottom: 0;
+    left: 0;
+    transition: width 0.3s;
+  }
+  #cs-contact-242 .cs-block {
+    /* drop the address to two lines */
+    display: block;
+  }
+  #cs-contact-242 .cs-icon-wrapper {
+    /* 32px - 36px */
+    margin-right: clamp(2rem, 2.5vw, 2.25rem);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* prevents flexbox from squishing it */
+    flex: none;
+    transition: transform 0.3s;
+  }
+  #cs-contact-242 .cs-icon {
+    /* 32px -36px */
+    width: clamp(2rem, 3vw, 2.25rem);
+    height: auto;
+    display: block;
+  }
+  #cs-contact-242 .cs-picture {
+    width: 100%;
+    border-radius: clamp(1rem, 1.5vw, 1.25rem);
+    /* clips image corners */
+    overflow: hidden;
+    display: block;
+    position: relative;
+    /* width divided height */
+    aspect-ratio: 1.44;
+  }
+  #cs-contact-242 .cs-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+/* Tablet - 700px */
+@media only screen and (min-width: 43.75rem) {
+  #cs-contact-242 #cs-form-242 {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    /* sends it to the right in the 2nd position */
+    order: 2;
+  }
+  #cs-contact-242 .cs-label {
+    width: 48%;
+  }
+  #cs-contact-242 .cs-label-message {
     width: 100%;
   }
-
-  .main-user-info {
-    max-height: 380px;
-    overflow: auto;
+  #cs-contact-242 .cs-button-solid {
+    margin-left: 0;
   }
+  #cs-contact-242 .cs-right-section {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 64rem) {
+  #cs-contact-242 .cs-container {
+    max-width: 80rem;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    column-gap: 1.25em;
+    row-gap: 4rem;
+  }
+  #cs-contact-242 #cs-form-242 {
+    width: 50%;
+    max-width: 40.625rem;
+  }
+  #cs-contact-242 .cs-label {
+    width: 100%;
+  }
+  #cs-contact-242 .cs-right-section {
+    width: 45%;
+    max-width: 33.875rem;
+    /* prevents flexbox from squishing it */
+    flex: none;
+    flex-direction: column;
+  }
+  #cs-contact-242 .cs-block {
+    /* sets address stay in one line */
+    display: inline-block;
+  }
+  #cs-contact-242 .cs-picture {
+    width: 100%;
+    max-width: 100%;
+    height: 27.375rem;
+  }
+}
 
-  .main-user-info::-webkit-scrollbar {
-    width: 0;
+.categoria-options {
+  display: flex;
+  flex-direction: row;
+}
+
+.categoria-options label {
+  margin-right: 100px; /* Aumentar espacio entre los botones de radio */
+  cursor: pointer; /* Cambiar el cursor al pasar sobre los botones */
+}
+
+.categoria-options input[type="radio"] {
+  display: none; /* Ocultar los botones de radio originales */
+}
+
+.categoria-options label {
+  position: relative;
+}
+
+.categoria-options label::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 2px solid #218bbb; /* Color del borde del círculo */
+  margin-right: 8px; /* Espacio entre el círculo y el texto */
+}
+
+.categoria-options input[type="radio"]:checked + label::before {
+  background-color: #218bbb; /* Color de fondo del círculo seleccionado */
+}
+
+/* testimonial section*/
+
+/*-- -------------------------- -->
+<---  testimonial section        -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #reviews-1529 {
+    padding: var(--sectionPadding);
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+  }
+  #reviews-1529 .cs-container {
+    /* changes to 1280px at tablet */
+    max-width: 34.375rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6.3vw, 4rem);
+  }
+  #reviews-1529 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    max-width: 39.375rem;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #reviews-1529 .cs-review {
+    width: 100%;
+    /* 32px - 80px top & bottom, 24px to 110px sides*/
+    padding: clamp(2rem, 7vw, 5rem) clamp(1.5rem, 7vw, 6.875rem);
+    box-sizing: border-box;
+    border: 1px solid var(--secondary);
+    /* 32px - 100px */
+    border-radius: clamp(2rem, 5vw, 6.25rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    position: relative;
+    z-index: 1;
+  }
+  #reviews-1529 .cs-review:before {
+    /* background-color */
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: var(--secondary);
+    /* 32px - 100px */
+    border-radius: clamp(2rem, 5vw, 6.25rem);
+    opacity: 0.1;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #reviews-1529 .cs-image-group {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    position: relative;
+    z-index: 1;
+    aspect-ratio: 1.15966387;
+  }
+  #reviews-1529 .cs-picture {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+    overflow: hidden;
+  }
+  #reviews-1529 .cs-picture img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #reviews-1529 .cs-flex {
+    max-width: 46rem;
+  }
+  #reviews-1529 .cs-quote {
+    /* 14px - 20px */
+    font-size: clamp(0.875rem, 2vw, 1.25rem);
+    line-height: 1.5em;
+    font-weight: 400;
+    margin: 0 0 1.5rem;
+    color: #4e4b66;
+  }
+  #reviews-1529 .cs-name {
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    margin-bottom: 0.25rem;
+    color: #1a1a1a;
+    display: block;
+  }
+  #reviews-1529 .cs-job {
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.2em;
+    color: #ff6d41;
+    display: block;
+  }
+  #reviews-1529 .cs-mask {
+    /* SVG Colors */
+    --maskBorder: #ffffff;
+    --maskBG: #fff0ec;
+    width: 101%;
+    height: 101%;
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
+  }
+  #reviews-1529 .cs-mask path {
+    transition: stroke 0.3s;
+  }
+  #reviews-1529 .cs-blob-wrapper {
+    width: 100%;
+    height: 100%;
+    /* 32px - 100px */
+    border-radius: clamp(2rem, 5vw, 6.25rem);
+    overflow: hidden;
+    /* prevents the mouse from interacting with it */
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #reviews-1529 .cs-blob {
+    --blobColor: var(--secondary);
+  }
+  #reviews-1529 .cs-blob1 {
+    width: 6.25rem;
+    height: auto;
+    opacity: 0.25;
+    position: absolute;
+    top: -0.3125rem;
+    left: -1.875rem;
+  }
+  #reviews-1529 .cs-blob2 {
+    /* 239px - 461px */
+    width: clamp(14.9375rem, 40vw, 28.8125rem);
+    height: auto;
+    opacity: 0.25;
+    position: absolute;
+    right: -3.125rem;
+    bottom: -0.9375rem;
+  }
+  #reviews-1529 .cs-graphic {
+    position: absolute;
+    z-index: 1;
+  }
+  #reviews-1529 .cs-graphic-one {
+    /* 48px - 138px */
+    width: clamp(3rem, 10vw, 8.625rem);
+    height: auto;
+    top: -1.25rem;
+    right: -1.25rem;
+    transform: rotate(104deg);
+  }
+  #reviews-1529 .cs-graphic-two {
+    /* 88px - 197px */
+    width: clamp(5.5rem, 15vw, 12.3125rem);
+    height: auto;
+    bottom: -1.25rem;
+    left: -2rem;
+  }
+}
+/* Tablet - 500px */
+@media only screen and (min-width: 31.25rem) {
+  #reviews-1529 .cs-container {
+    max-width: 80rem;
+  }
+  #reviews-1529 .cs-review {
+    max-width: none;
+    flex-direction: row;
+  }
+  #reviews-1529 .cs-image-group,
+  #reviews-1529 .cs-flex {
+    flex: 1 0 0;
+  }
+  #reviews-1529 .cs-image-group {
+    max-width: 16.25rem;
+  }
+}
+/* Larger Desktop - 1300px */
+@media only screen and (min-width: 81.25rem) {
+  #reviews-1529 .cs-picture {
+    font-size: inherit;
+  }
+  #reviews-1529 .cs-blob1 {
+    width: 10rem;
+    left: 0;
+    top: 0;
   }
 }
