--- a/version-actual/website/pages/timetable.css
+++ b/version-actual/website/pages/timetable.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background-image: url("../../images/stock/surfer3.jpg");
+  background-image: url("../../images/stock/vertical1.jpg");
   background-size: cover;
   background-position: center;
 }
