--- a/version-actual/website/css/styles.css
+++ b/version-actual/website/css/styles.css
@@ -111,9 +111,197 @@ body {
   font-style: normal;
 }
 
+/* Estilos del Video de Fondo */
+.hero {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
 
+#video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  object-fit: cover;
+  background-color: #000000;
+}
 
+#video-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-color: rgba(14, 14, 22, 0.568);
+  z-index: -1;
+}
 
+/* Estilos mejorados del CTA (Call to Action) */
+.cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+}
+
+.cta h2 {
+  font-size: 6.5em; /* Aumentamos el tamaño del texto */
+  margin-bottom: 30px; /* Mayor espacio inferior */
+}
+
+/* Estilos de la sección de información */
+.info-section {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.date-wrap,
+.location-wrap,
+.social-share {
+  flex: 1;
+}
+
+.date-wrap h5,
+.location-wrap h5,
+.social-icons {
+  margin: 0;
+}
+
+.social-icons {
+  list-style: none;
+  padding: 0;
+}
+
+.social-icons li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.social-icons li a {
+  color: #fff;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+/* Estilos de la sección de about */
+
+.about-section {
+  padding: 80px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #f2f2f2;
+}
+
+.about-content {
+  max-width: 600px;
+  padding-right: 20px;
+}
+
+.about-content h2 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.about-content p {
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.about-image {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .about-section {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about-content,
+  .about-image {
+    max-width: 100%;
+  }
+
+  .about-content {
+    padding: 0 20px;
+  }
+}
+
+/* Estilos de la sección de ponentes de la charla */
+
+.artists-section {
+  padding: 80px 0;
+  text-align: center;
+}
+
+.artists-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.artist {
+  width: 45%;
+  margin: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.artist img {
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.artist-info {
+  padding: 20px;
+  text-align: left;
+}
+
+.artist-info p {
+  margin: 10px 0;
+  font-size: 16px;
+}
+
+.artist-info strong {
+  font-weight: bold;
+}
+
+.artist-info a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.artist-info a:hover {
+  text-decoration: underline;
+}
+
+/* Estilos del calendario */
 
 /* Estilos del Navbar, hace falta par las posiciones de las cards */
 .navbar {
