--- a/version-actual/website/css/formstyle.css
+++ b/version-actual/website/css/formstyle.css
@@ -2,8 +2,7 @@
 <---          Contact           -->
 <--- -------------------------- -*/
 
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
+
   #cs-contact-242 {
     padding: var(--sectionPadding);
   }
@@ -136,7 +135,7 @@
     position: absolute;
     height: 100%;
     width: 0%;
-    background: #000;
+    background: #8f2626;
     opacity: 1;
     top: 0;
     left: 0;
@@ -262,7 +261,7 @@
     width: 100%;
     object-fit: cover;
   }
-}
+
 /* Tablet - 700px */
 @media only screen and (min-width: 43.75rem) {
   #cs-contact-242 #cs-form-242 {
@@ -285,41 +284,6 @@
   #cs-contact-242 .cs-right-section {
     flex-direction: row;
     align-items: center;
-  }
-}
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-  #cs-contact-242 .cs-container {
-    max-width: 80rem;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    column-gap: 1.25em;
-    row-gap: 4rem;
-  }
-  #cs-contact-242 #cs-form-242 {
-    width: 50%;
-    max-width: 40.625rem;
-  }
-  #cs-contact-242 .cs-label {
-    width: 100%;
-  }
-  #cs-contact-242 .cs-right-section {
-    width: 45%;
-    max-width: 33.875rem;
-    /* prevents flexbox from squishing it */
-    flex: none;
-    flex-direction: column;
-  }
-  #cs-contact-242 .cs-block {
-    /* sets address stay in one line */
-    display: inline-block;
-  }
-  #cs-contact-242 .cs-picture {
-    width: 100%;
-    max-width: 100%;
-    height: 27.375rem;
   }
 }
 
@@ -361,8 +325,6 @@
 <---  testimonial section        -->
 <--- -------------------------- -*/
 
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
   #reviews-1529 {
     padding: var(--sectionPadding);
     overflow: hidden;
@@ -536,9 +498,8 @@
     bottom: -1.25rem;
     left: -2rem;
   }
-}
-/* Tablet - 500px */
-@media only screen and (min-width: 31.25rem) {
+
+
   #reviews-1529 .cs-container {
     max-width: 80rem;
   }
@@ -553,15 +514,4 @@
   #reviews-1529 .cs-image-group {
     max-width: 16.25rem;
   }
-}
-/* Larger Desktop - 1300px */
-@media only screen and (min-width: 81.25rem) {
-  #reviews-1529 .cs-picture {
-    font-size: inherit;
-  }
-  #reviews-1529 .cs-blob1 {
-    width: 10rem;
-    left: 0;
-    top: 0;
-  }
-}
+
